--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power BI Dashboards</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <title>Wassan Northcoast Dashboards</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- React and ReactDOM -->
+    <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+
+    <!-- Bootstrap JS bundle (includes dropdown functionality) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Your app JSX -->
     <script type="module" src="/src/main.jsx"></script>
-    <script>
-      function showDashboard(dashboardId) {
-          // Hide all containers
-          const containers = document.querySelectorAll('.container');
-          containers.forEach(container => container.classList.remove('active'));
-  
-          // Show the selected dashboard
-          const selectedContainer = document.getElementById(dashboardId);
-          selectedContainer.classList.add('active');
-      }
-  </script>
   </body>
 </html>
